Mon Jul 16 13:27:44 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * Merge a modified patch from Josip Rodin:
    + dselect/basecmds.cc: Improve some help texts and helpscreen keybindings
    + dselect/helpmsgs.src: Improve text

Mon Jul 16 12:55:49 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * utils/start-stop-daemon.c: Fix test for nice(2) failure

Mon Jul 16 12:44:51 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * dselect/dselect.h: make baselist::setheights() virtual
  * dselect/method.h: add setheights() member and fix protection
  * dselect/methlist.cc: override setheights() to make list_height 1
    higher then the default so we draw the list correctly
  * dselect/methkeys.cc: make Q do abort so we are consistent with the pkglist

Mon Jul 16 01:50:58 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * Merge a reworked version of a patch from Joey Hess
    + dselect/dselect.8: Document new colour options
    + dselect/basecmds.cc: properly draw the background using helpscreen_attr
    + dselect/baselist.cc: change drawing code to use new changeable colours
    + dselect/dselect.h: Add all the colour structures
    + dselect/main.cc: Parse --colour options

Mon Jul 16 00:01:24 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * dselect/baselist.cc: include unistd.h which is needed to get the
    ioctl prototype on Solaris

Sun Jul 15 00:37:13 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * debian/preinst: removed (we now use dpkg.preinst)
  * debian/control:
    + add dselect package
    + fix section of dpkg-doc
  * debian/dpkg.conffiles: remove dselect.cfg
  * debian/dselect.{conffiles,postinst,prerm}: added
  * debian/rules: 
    + add German to list of manpage translations
    + split out dselect into its own package
    + strip enoent and start-stop-daemon as well

Sat Jul 14 23:35:57 CEST 2001 Wichert Akkerman <wakkerma@debian.org>

  * dselect/main.cc, dpkg/main.c: add per-user configuration file
