@@ -507,6 +507,16 @@ The program \fBdpkg\fP will execute while starting a new shell.
 .B COLUMNS
 Sets the number of columns \fBdpkg\fP should use when displaying formatted
 text.  Currently only used by -l.
+.TP
+.B DPKG_OLD_CONFFILE
+Set by \fBdpkg\fP to the filename of the old configuration file 
+when you start a shell to examine a changed configuration.
+file.
+.TP
+.B DPKG_NEW_CONFFILE
+Set by \fBdpkg\fP to the filename of the newversion of a configuration file
+when you start a shell to examine a changed configuration.
+file.
 
 .SH EXAMPLES
 To list packages related to the editor vi:
