@@ -24,6 +24,8 @@ dpkg (1.10) unstable; urgency=low
     consistent with the package list
   * Fix test for nice(2) failure in start-stop-daemon. Closes: Bug#104561
   * Improve the dselect helpscreen a bit. Closes: Bug#72634
+  * New version comparison routine that can handle arbitrarily large numbers
+    and accepts `~' as a low-sorting character. Closes: Bug#93386
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
