@@ -1,3 +1,7 @@
+Mon Jul 16 14:10:18 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
+
+  * lib/vercmp.c: New verrevcmp() from Anthony Towns
+
 Mon Jul 16 13:27:44 CEST 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * Merge a modified patch from Josip Rodin:
